--- a/fitness-activity-tracker/src/Sidebar.css
+++ b/fitness-activity-tracker/src/Sidebar.css
@@ -1,3 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .sidebar {
-    background-color: blueviolet;
+    background-color: #F1EDE6;
+    color: black;
+    width: 12.5%;
+    height: 92vh;
+    position: fixed;
+    top: 4vh;
+    left: 4vh;
+    overflow-y: auto;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2vh;
+    border: 1px solid white;
+
 }
+
+ul {
+    margin-top: 15vh;
+    list-style-type: none;
+    line-height: 3;
+    width: 100%;
+    text-align: center;
+    padding: 1vh;
+}
+
+li {
+    border: 1px solid #363434;
+    border-radius: 1vh;
+    margin: 1vh;
+    transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+    user-select: none;
+}
+
+li:hover {
+    background-color: #f0f0f0;
+    color: #007bff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+li:active {
+    background-color: #e0e0e0b0;
+    transform: scale(0.98);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
