--- a/fitness-activity-tracker/src/Sidebar.css
+++ b/fitness-activity-tracker/src/Sidebar.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 .sidebar {
-    background-color: #F1EDE6;
+    background-color: rgb(62, 62, 124);
     color: black;
     width: 12.5%;
     height: 92vh;
