--- a/fitness-activity-tracker/src/Dashboard.css
+++ b/fitness-activity-tracker/src/Dashboard.css
@@ -38,8 +38,9 @@
   display: flex;
   flex-direction: row;
   justify-content:space-around; /* Optional: add space between elements */  
-  width: 72%;
+  width: 100%;
   height: 34vh;
+  background-color: blanchedalmond
 }
 
 .step-tracker-main {
@@ -55,5 +56,24 @@
   background-color: rgb(62, 62, 124);
   padding: 1%;
   width: 29vw;
+  margin-top: 4vh;
+}
+
+.third-row {
+  background-color: cadetblue;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around; /* Optional: add space between elements */  
+  width: 72%;
+  height: 34vh;
+
+}
+
+.to-do-list {
+  background-color: rgb(62, 62, 124);
+  margin-right: 3vw;
+  width:16vw;
+  height: 63vh;
+  border-radius: 4%;
   margin-top: 4vh;
 }
